grid and responsive project

--- a/10/project/project.html
+++ b/10/project/project.html
@@ -16,6 +16,7 @@
     </style> -->
   </head>
   <body>
+    <!-- navbar -->
     <nav>
       <img src="./logo.jpg" alt="logo" />
       <ul>
@@ -27,11 +28,13 @@
       <h1>my-site</h1>
     </nav>
 
+    <!-- main -->
     <div class="main">
       <aside>aside</aside>
       <main>main</main>
     </div>
 
+    <!-- footer -->
     <footer>footer</footer>
   </body>
 </html>
